--- a/less/footer.less
+++ b/less/footer.less
@@ -34,6 +34,10 @@ footer {
             width: 290px;
             letter-spacing: .3px;
 
+            @media @mobile {
+                width: 100%;
+            }
+
             input {
                 width: 90%;
                 height: 35px;
