--- a/less/global.less
+++ b/less/global.less
@@ -63,3 +63,7 @@ body {
   color: @black;
   line-height: 24px;
 }
+
+* {
+  box-sizing: border-box;
+}
