--- a/less/navigation.less
+++ b/less/navigation.less
@@ -10,9 +10,9 @@
     }
 
     .nav-contain {
-        max-width: 890px;
+        max-width: 860px;
         margin: 0 auto;
-        //padding: 0 25px 0 25px;;
+       // padding: 0 15px 0 15px;;
         .flex(space-between);
 
         h1 {
