--- a/less/services.less
+++ b/less/services.less
@@ -46,12 +46,19 @@
                 color: @white;
             }
         }
+
+        .tab-selected {
+            background-color: @blue;
+            color: @white;
+        }
     }
 
     .tab-content {
         .flex(space-between);
         align-items: center;
         margin-bottom: 80px;
+
+        display: none;
 
         @media @mobile {
             flex-direction: column;
@@ -79,7 +86,9 @@
         }
 
         .tab-content-img {
-            width: 50%;
+           // width: 50%;
+
+            //border: 1px solid blue;
 
             @media @mobile {
 
@@ -88,13 +97,25 @@
 
             img {
 
+                width: 100%;
+
                 @media @mobile {
                     content:url("../img/services/services-tab-mobile-pre-construction-img.png");
 
-                    width: 100%;
+                    //width: 100%;
                 }
                 
             }
         }
+
+    }
+
+    .tab-content-selected {
+        display: flex;
+
+
+        // .tab-content-text {
+        //     border: 1px solid red;
+        // }
     }
 }
